--- a/11thLauncher/MainWindow.xaml
+++ b/11thLauncher/MainWindow.xaml
@@ -53,12 +53,7 @@
                 </MenuItem>
             </MenuItem>
             <MenuItem Header="_Herramientas" Background="{x:Null}">
-                <MenuItem x:Name="menu_logViewer" Header="_Visor de Logs" Click="menu_logViewer_Click" IsEnabled="False">
-                    <MenuItem.Icon>
-                        <Image Source="/Resources/menu_logviewer.png"/>
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem x:Name="menu_addonSync" Header="_Sincronizador de addons" Click="menu_addonSync_Click">
+                <MenuItem x:Name="menu_logViewer" Header="_Visor de Logs" Click="menu_logViewer_Click" IsEnabled="True">
                     <MenuItem.Icon>
                         <Image Source="/Resources/menu_logviewer.png"/>
                     </MenuItem.Icon>
@@ -147,9 +142,9 @@
                             </Rectangle.Fill>
                         </Rectangle>
                     </Button>
-                    <Button x:Name="button_startSP" Content="Iniciar ArmA 3" HorizontalAlignment="Left" Margin="230,38,0,0" VerticalAlignment="Top" Width="150" Height="50" FontSize="12" FontWeight="Light" ToolTip="Iniciar ArmA 3 con los addons y parámetros indicados" Click="button_startSP_Click"/>
-                    <Button x:Name="button_startMP" Content="Unirse a multijugador" HorizontalAlignment="Left" Margin="230,98,0,0" VerticalAlignment="Top" Width="150" Height="50" FontSize="12" FontWeight="Light" ToolTip="Iniciar ArmA 3 y unirse al servidor indicado" Click="button_startMP_Click"/>
-                    <Button x:Name="button_startHC" Content="Iniciar Headless client" HorizontalAlignment="Left" Margin="230,159,0,0" VerticalAlignment="Top" Width="150" Height="50" FontSize="12" FontWeight="Light" ToolTip="Iniciar un cliente sin GUI y unirse al servidor indicado" Click="button_startHC_Click"/>
+                    <Button x:Name="button_startSP" Content="Iniciar ArmA 3" HorizontalAlignment="Left" Margin="227,38,0,0" VerticalAlignment="Top" Width="156" Height="50" FontSize="12" FontWeight="Normal" ToolTip="Iniciar ArmA 3 con los addons y parámetros indicados" Click="button_startSP_Click"/>
+                    <Button x:Name="button_startMP" Content="Unirse a multijugador" HorizontalAlignment="Left" Margin="227,98,0,0" VerticalAlignment="Top" Width="156" Height="50" FontSize="12" FontWeight="Normal" ToolTip="Iniciar ArmA 3 y unirse al servidor indicado" Click="button_startMP_Click"/>
+                    <Button x:Name="button_startHC" Content="Iniciar Headless client" HorizontalAlignment="Left" Margin="225,159,0,0" VerticalAlignment="Top" Width="156" Height="50" FontSize="12" FontWeight="Normal" ToolTip="Iniciar un cliente sin GUI y unirse al servidor indicado" Click="button_startHC_Click"/>
                     <Button x:Name="button_clipSP" Style="{DynamicResource MetroCircleButtonStyle}" HorizontalAlignment="Left" Margin="385,42,0,0" VerticalAlignment="Top" Width="40" Height="40" ToolTip="Copiar linea de inicio al portapapeles" Click="button_clipSP_Click">
                         <Rectangle Width="20" Height="20">
                             <Rectangle.Fill>
@@ -179,15 +174,18 @@
                     <PasswordBox x:Name="passwordBox_serverPassword" HorizontalAlignment="Left" Margin="495,272,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.625,0.192" Width="120"/>
                     <Expander x:Name="groupBox_servers" Header="Servidores" HorizontalAlignment="Left" Margin="430,23,0,0" VerticalAlignment="Top" Height="119" Width="185" IsExpanded="True">
                         <Grid Height="90" VerticalAlignment="Top" Margin="-4,-4,-2,-6" HorizontalAlignment="Left" Width="179">
-                            <Label Content="Coop" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                            <Label Content="Academia" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="1,31,0,0"/>
-                            <Label Content="ALiVE" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,62,0,0"/>
-                            <Button x:Name="button_serverCoop" Content="Seleccionar" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="100,2,0,0" Click="button_serverCoop_Click"/>
-                            <Button x:Name="button_serverAcademy" Content="Seleccionar" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="100,32,0,0" Click="button_serverAcademy_Click"/>
-                            <Button x:Name="button_serverAlive" Content="Seleccionar" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="100,61,0,0" Click="button_serverAlive_Click"/>
-                            <Image x:Name="image_coopStatus" HorizontalAlignment="Left" Height="15" VerticalAlignment="Top" Width="15" Margin="78,8,0,0" Source="/Resources/unknown.png" Stretch="Fill" MouseLeftButtonDown="image_coopStatus_MouseLeftButtonDown" ToolTip="Click para comprobar el estado del servidor"/>
-                            <Image x:Name="image_academyStatus" HorizontalAlignment="Left" Height="15" VerticalAlignment="Top" Width="15" Margin="78,37,0,0" Source="/Resources/unknown.png" Stretch="Fill" MouseLeftButtonDown="image_academyStatus_MouseLeftButtonDown" ToolTip="Click para comprobar el estado del servidor"/>
-                            <Image x:Name="image_aliveStatus" HorizontalAlignment="Left" Height="15" VerticalAlignment="Top" Width="15" Margin="78,65,0,0" Source="/Resources/unknown.png" Stretch="Fill" MouseLeftButtonDown="image_aliveStatus_MouseLeftButtonDown" ToolTip="Click para comprobar el estado del servidor"/>
+                            <Label Content="Coop" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="-2,0,0,0"/>
+                            <Label Content="Academia" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="-2,31,0,0"/>
+                            <Label Content="ALiVE" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="-2,62,0,0"/>
+                            <Button x:Name="button_serverCoop" Content="Rellenar" HorizontalAlignment="Left" VerticalAlignment="Top" Width="63" Margin="112,2,0,0" Click="button_serverCoop_Click" FontSize="10" FontWeight="Medium" ToolTip="Rellenar los campos dirección y puerto para este servidor"/>
+                            <Button x:Name="button_serverAcademy" Content="Rellenar" HorizontalAlignment="Left" VerticalAlignment="Top" Width="63" Margin="112,32,0,0" Click="button_serverAcademy_Click" FontSize="10" FontWeight="Medium" ToolTip="Rellenar los campos dirección y puerto para este servidor"/>
+                            <Button x:Name="button_serverAlive" Content="Rellenar" HorizontalAlignment="Left" VerticalAlignment="Top" Width="63" Margin="112,61,0,0" Click="button_serverAlive_Click" FontSize="10" FontWeight="Medium" ToolTip="Rellenar los campos dirección y puerto para este servidor"/>
+                            <Image x:Name="image_coopStatus" HorizontalAlignment="Left" Height="15" VerticalAlignment="Top" Width="15" Margin="58,6,0,0" Source="/Resources/unknown.png" Stretch="Fill" MouseLeftButtonDown="image_coopStatus_MouseLeftButtonDown" ToolTip="Click para comprobar el estado del servidor"/>
+                            <Image x:Name="image_academyStatus" HorizontalAlignment="Left" Height="15" VerticalAlignment="Top" Width="15" Margin="58,38,0,0" Source="/Resources/unknown.png" Stretch="Fill" MouseLeftButtonDown="image_academyStatus_MouseLeftButtonDown" ToolTip="Click para comprobar el estado del servidor" RenderTransformOrigin="-0.156,0.467"/>
+                            <Image x:Name="image_aliveStatus" HorizontalAlignment="Left" Height="15" VerticalAlignment="Top" Width="15" Margin="58,68,0,0" Source="/Resources/unknown.png" Stretch="Fill" MouseLeftButtonDown="image_aliveStatus_MouseLeftButtonDown" ToolTip="Click para comprobar el estado del servidor"/>
+                            <Label x:Name="label_coopPlayers" Content="-/-" HorizontalAlignment="Left" Margin="72,2,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Width="41"/>
+                            <Label x:Name="label_academyPlayers" Content="-/-" HorizontalAlignment="Left" Margin="72,33,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Width="41"/>
+                            <Label x:Name="label_alivePlayers" Content="-/-" HorizontalAlignment="Left" Margin="72,61,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Width="41"/>
                         </Grid>
                     </Expander>
                     <Expander x:Name="groupBox_repository" Header="Repositorio" HorizontalAlignment="Left" Margin="430,147,0,0" VerticalAlignment="Top" Height="80" Width="185" IsExpanded="True">
@@ -262,7 +260,7 @@
                         <ComboBoxItem Content="4096"/>
                         <ComboBoxItem Content="8192"/>
                     </ComboBox>
-                    <CheckBox x:Name="checkBox_cpuCount" Content="Número de nucleos" HorizontalAlignment="Left" Margin="359,103,0,0" VerticalAlignment="Top" ToolTip="Número de núcleos a utilizar (menor o igual al número de núcleos del procesador)" Checked="checkBox_cpuCount_Checked" Unchecked="checkBox_cpuCount_Unchecked"/>
+                    <CheckBox x:Name="checkBox_cpuCount" Content="Número de núcleos" HorizontalAlignment="Left" Margin="359,103,0,0" VerticalAlignment="Top" ToolTip="Número de núcleos a utilizar (menor o igual al número de núcleos del procesador)" Checked="checkBox_cpuCount_Checked" Unchecked="checkBox_cpuCount_Unchecked"/>
                     <ComboBox x:Name="comboBox_cpuCount" HorizontalAlignment="Left" Margin="506,101,0,0" VerticalAlignment="Top" Width="107" IsEnabled="False">
                         <ComboBoxItem Content="1"/>
                         <ComboBoxItem Content="2"/>
